--- a/package.json
+++ b/package.json
@@ -7,10 +7,23 @@
         "dev": "vite",
         "build": "vue-tsc && vite build",
         "preview": "vite preview",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "lint:eslint": "eslint \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
+        "lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,json,tsx,css,less,scss,vue,html,md}\"",
+        "lint:stylelint": "stylelint --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
+        "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js",
+        "lint:pretty": "pretty-quick --staged"
     },
     "dependencies": {
-        "vue": "^3.4.15"
+        "@vicons/antd": "^0.12.0",
+        "@vicons/ionicons5": "^0.12.0",
+        "@vueuse/core": "^10.7.2",
+        "axios": "^1.6.7",
+        "mockjs": "^1.1.0",
+        "naive-ui": "^2.37.3",
+        "pinia": "^2.1.7",
+        "vue": "^3.4.15",
+        "vue-router": "^4.2.5"
     },
     "devDependencies": {
         "@commitlint/cli": "^18.6.1",
@@ -21,6 +34,8 @@
         "chalk": "^5.3.0",
         "commitlint": "^18.6.1",
         "commitlint-config-git-commit-emoji": "^1.0.0",
+        "conventional-changelog": "^5.1.0",
+        "conventional-changelog-cli": "^4.1.0",
         "cross-env": "^7.0.3",
         "date-fns": "^3.3.1",
         "dotenv": "^16.4.4",
@@ -35,11 +50,14 @@
         "stylelint-config-prettier": "^9.0.5",
         "stylelint-config-standard": "^36.0.0",
         "typescript": "^5.2.2",
+        "unplugin-auto-import": "^0.17.5",
         "unplugin-vue-components": "^0.26.0",
         "vite": "^5.1.0",
+        "vite-plugin-compression": "^0.5.1",
         "vite-plugin-html": "^3.2.2",
         "vite-plugin-mock": "^3.0.1",
         "vue-eslint-parser": "^9.4.2",
-        "vue-tsc": "^1.8.27"
+        "vue-tsc": "^1.8.27",
+        "vue-types": "^5.1.1"
     }
 }
