--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,5 +7,14 @@
     "allowSyntheticDefaultImports": true,
     "strict": true
   },
-  "include": ["vite.config.ts"]
+  "include": [
+    "vite.config.ts",
+    "build/**/*.ts",
+    "build/**/*.d.ts",
+    "types/*.d.ts"
+  ],
+  "exclude": [
+    "**/*.js",
+    "commitlint.config.js"
+  ]
 }
