--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
         "preview": "vite preview",
         "prepare": "husky install",
         "lint:eslint": "eslint \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
-        "lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,json,tsx,css,less,scss,vue,html,md}\"",
-        "lint:stylelint": "stylelint --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
-        "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js",
+        "lint:prettier": "prettier --write --log-level warn \"src/**/*.{js,ts,json,tsx,css,less,scss,vue,html,md}\"",
+        "lint:stylelint": "stylelint --fix \"**/*.{vue,less,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
         "lint:pretty": "pretty-quick --staged"
     },
     "dependencies": {
@@ -43,6 +42,7 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-babel": "^5.3.1",
         "eslint-plugin-prettier": "^5.1.3",
+        "eslint-plugin-vue": "^9.21.1",
         "esno": "^4.0.0",
         "husky": "^8.0.0",
         "lint-staged": "^15.2.2",
