--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "prepare": "husky install",
         "lint:eslint": "eslint \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
         "lint:prettier": "prettier --write --log-level warn \"src/**/*.{js,ts,json,tsx,css,less,scss,vue,html,md}\"",
-        "lint:stylelint": "stylelint --fix \"**/*.{vue,less,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
+        "lint:stylelint": "stylelint --fix \"**/*.{vue,less,css,scss}\"",
         "lint:pretty": "pretty-quick --staged"
     },
     "dependencies": {
@@ -41,14 +41,16 @@
         "eslint": "^8.56.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-babel": "^5.3.1",
+        "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-vue": "^9.21.1",
         "esno": "^4.0.0",
         "husky": "^8.0.0",
         "lint-staged": "^15.2.2",
-        "stylelint": "^14.16.1",
+        "stylelint": "^16.1.0",
         "stylelint-config-prettier": "^9.0.5",
         "stylelint-config-standard": "^36.0.0",
+        "stylelint-prettier": "^5.0.0",
         "typescript": "^5.2.2",
         "unplugin-auto-import": "^0.17.5",
         "unplugin-vue-components": "^0.26.0",
