--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,7 @@
 {
     "tabWidth": 2,
     "semi": false,
-    "bracketSameLine": true
+    "bracketSameLine": true,
+    "singleQuote": true,
+    "printWidth": 120
 }
