--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
         "build": "vue-tsc && vite build",
         "preview": "vite preview",
         "prepare": "husky install",
-        "lint:eslint": "eslint \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
+        "lint:eslint": "eslint --fix \"{src,mock}/**/*.{vue,ts,tsx}\"",
         "lint:prettier": "prettier --write --log-level warn \"src/**/*.{js,ts,json,tsx,css,less,scss,vue,html,md}\"",
-        "lint:stylelint": "stylelint --fix \"**/*.{vue,less,css,scss}\"",
-        "lint:pretty": "pretty-quick --staged"
+        "lint:stylelint": "stylelint --fix \"**/*.{vue,less,css,scss}\""
     },
     "dependencies": {
         "@vicons/antd": "^0.12.0",
@@ -27,6 +26,7 @@
     "devDependencies": {
         "@commitlint/cli": "^18.6.1",
         "@commitlint/config-conventional": "^18.6.2",
+        "@typescript-eslint/parser": "^7.0.1",
         "@vitejs/plugin-vue": "^5.0.3",
         "@vitejs/plugin-vue-jsx": "^3.1.0",
         "babel-core": "^6.26.3",
@@ -47,10 +47,12 @@
         "esno": "^4.0.0",
         "husky": "^8.0.0",
         "lint-staged": "^15.2.2",
-        "stylelint": "^16.1.0",
+        "postcss-html": "^1.6.0",
+        "stylelint": "^14.16.1",
         "stylelint-config-prettier": "^9.0.5",
-        "stylelint-config-standard": "^36.0.0",
-        "stylelint-prettier": "^5.0.0",
+        "stylelint-config-standard": "^29.0.0",
+        "stylelint-order": "^6.0.4",
+        "stylelint-prettier": "^3.0.0",
         "typescript": "^5.2.2",
         "unplugin-auto-import": "^0.17.5",
         "unplugin-vue-components": "^0.26.0",
