--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@typescript-eslint/parser": "^7.0.1",
         "@vitejs/plugin-vue": "^5.0.3",
         "@vitejs/plugin-vue-jsx": "^3.1.0",
+        "autoprefixer": "^10.4.17",
         "babel-core": "^6.26.3",
         "chalk": "^5.3.0",
         "commitlint": "^18.6.1",
@@ -46,13 +47,19 @@
         "eslint-plugin-vue": "^9.21.1",
         "esno": "^4.0.0",
         "husky": "^8.0.0",
+        "less": "^4.2.0",
+        "less-loader": "^11.1.3",
         "lint-staged": "^15.2.2",
+        "postcss": "^8.4.35",
         "postcss-html": "^1.6.0",
+        "postcss-import": "^16.0.1",
+        "postcss-nested": "^6.0.1",
         "stylelint": "^14.16.1",
         "stylelint-config-prettier": "^9.0.5",
         "stylelint-config-standard": "^29.0.0",
         "stylelint-order": "^6.0.4",
         "stylelint-prettier": "^3.0.0",
+        "tailwindcss": "^3.4.1",
         "typescript": "^5.2.2",
         "unplugin-auto-import": "^0.17.5",
         "unplugin-vue-components": "^0.26.0",
