✨ feat(基础视图框架搭建): 完成基础轮廓视图框架的搭建

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -11,7 +11,10 @@
     "vite.config.ts",
     "build/**/*.ts",
     "build/**/*.d.ts",
-    "types/*.d.ts"
+    "types/*.d.ts",
+    "types/**/*.d.ts",
+    "components.d.ts",
+    "auto-import.d.ts"
   ],
   "exclude": [
     "**/*.js",
