--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@vicons/ionicons5": "^0.12.0",
         "@vueuse/core": "^10.7.2",
         "axios": "^1.6.7",
+        "lodash-es": "^4.17.21",
         "mockjs": "^1.1.0",
         "naive-ui": "^2.37.3",
         "pinia": "^2.1.7",
