--- a/package.json
+++ b/package.json
@@ -1,74 +1,74 @@
 {
-    "name": "national-kb-admin",
-    "private": true,
-    "version": "1.0.0",
-    "scripts": {
-        "dev": "vite",
-        "build": "vue-tsc && vite build",
-        "preview": "vite preview",
-        "prepare": "husky install",
-        "lint:eslint": "eslint --fix \"{src,mock}/**/*.{vue,ts,tsx}\"",
-        "lint:prettier": "prettier --write --log-level warn \"src/**/*.{js,ts,json,tsx,css,less,scss,vue,html,md}\"",
-        "lint:stylelint": "stylelint --fix \"**/*.{vue,less,css,scss}\""
-    },
-    "dependencies": {
-        "@vicons/antd": "^0.12.0",
-        "@vicons/ionicons5": "^0.12.0",
-        "@vueuse/core": "^10.7.2",
-        "axios": "^1.6.7",
-        "lodash-es": "^4.17.21",
-        "mockjs": "^1.1.0",
-        "naive-ui": "^2.37.3",
-        "pinia": "^2.1.7",
-        "vue": "^3.4.15",
-        "vue-router": "^4.2.5"
-    },
-    "devDependencies": {
-        "@commitlint/cli": "^18.6.1",
-        "@commitlint/config-conventional": "^18.6.2",
-        "@typescript-eslint/parser": "^7.0.1",
-        "@vitejs/plugin-vue": "^5.0.3",
-        "@vitejs/plugin-vue-jsx": "^3.1.0",
-        "autoprefixer": "^10.4.17",
-        "babel-core": "^6.26.3",
-        "chalk": "^5.3.0",
-        "commitlint": "^18.6.1",
-        "commitlint-config-git-commit-emoji": "^1.0.0",
-        "conventional-changelog": "^5.1.0",
-        "conventional-changelog-cli": "^4.1.0",
-        "cross-env": "^7.0.3",
-        "date-fns": "^3.3.1",
-        "dotenv": "^16.4.4",
-        "eslint": "^8.56.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-babel": "^5.3.1",
-        "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-prettier": "^5.1.3",
-        "eslint-plugin-vue": "^9.21.1",
-        "esno": "^4.0.0",
-        "husky": "^8.0.0",
-        "less": "^4.2.0",
-        "less-loader": "^11.1.3",
-        "lint-staged": "^15.2.2",
-        "postcss": "^8.4.35",
-        "postcss-html": "^1.6.0",
-        "postcss-import": "^16.0.1",
-        "postcss-nested": "^6.0.1",
-        "stylelint": "^14.16.1",
-        "stylelint-config-prettier": "^9.0.5",
-        "stylelint-config-standard": "^29.0.0",
-        "stylelint-order": "^6.0.4",
-        "stylelint-prettier": "^3.0.0",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5.2.2",
-        "unplugin-auto-import": "^0.17.5",
-        "unplugin-vue-components": "^0.26.0",
-        "vite": "^5.1.0",
-        "vite-plugin-compression": "^0.5.1",
-        "vite-plugin-html": "^3.2.2",
-        "vite-plugin-mock": "^3.0.1",
-        "vue-eslint-parser": "^9.4.2",
-        "vue-tsc": "^1.8.27",
-        "vue-types": "^5.1.1"
-    }
+  "name": "national-kb-admin",
+  "private": true,
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview",
+    "prepare": "husky install",
+    "lint:eslint": "eslint --fix \"{src,mock}/**/*.{vue,ts,tsx}\"",
+    "lint:prettier": "prettier --write --log-level log \"src/**/*.{js,ts,json,tsx,css,less,scss,vue,html,md}\"",
+    "lint:stylelint": "stylelint --fix \"**/*.{vue,less,css,scss}\""
+  },
+  "dependencies": {
+    "@vicons/antd": "^0.12.0",
+    "@vicons/ionicons5": "^0.12.0",
+    "@vueuse/core": "^10.7.2",
+    "axios": "^1.6.7",
+    "lodash-es": "^4.17.21",
+    "mockjs": "^1.1.0",
+    "naive-ui": "^2.37.3",
+    "pinia": "^2.1.7",
+    "vue": "^3.4.15",
+    "vue-router": "^4.2.5"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.2",
+    "@typescript-eslint/parser": "^7.0.1",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "autoprefixer": "^10.4.17",
+    "babel-core": "^6.26.3",
+    "chalk": "^5.3.0",
+    "commitlint": "^18.6.1",
+    "commitlint-config-git-commit-emoji": "^1.0.0",
+    "conventional-changelog": "^5.1.0",
+    "conventional-changelog-cli": "^4.1.0",
+    "cross-env": "^7.0.3",
+    "date-fns": "^3.3.1",
+    "dotenv": "^16.4.4",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.21.1",
+    "esno": "^4.0.0",
+    "husky": "^8.0.0",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
+    "lint-staged": "^15.2.2",
+    "postcss": "^8.4.35",
+    "postcss-html": "^1.6.0",
+    "postcss-import": "^16.0.1",
+    "postcss-nested": "^6.0.1",
+    "stylelint": "^14.16.1",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-standard": "^29.0.0",
+    "stylelint-order": "^6.0.4",
+    "stylelint-prettier": "^3.0.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
+    "vite": "^5.1.0",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-mock": "^3.0.1",
+    "vue-eslint-parser": "^9.4.2",
+    "vue-tsc": "^1.8.27",
+    "vue-types": "^5.1.1"
+  }
 }
