--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "national-kb-admin",
   "private": true,
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
@@ -51,7 +52,7 @@
     "husky": "^8.0.0",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
-    "lint-staged": "^14.0.1",
+    "lint-staged": "13.2.0",
     "postcss": "^8.4.35",
     "postcss-html": "^1.6.0",
     "postcss-import": "^16.0.1",
