--- a/.editorconfig
+++ b/.editorconfig
@@ -6,7 +6,7 @@ end_of_line=LF
 insert_final_newline=true
 indent_style=space
 indent_size=2
-max_line_length = 100
+max_line_length = 80
 
 [*.{yml,yaml,json}]
 indent_style = space
@@ -16,4 +16,4 @@ indent_size = 2
 trim_trailing_whitespace = false
 
 [Makefile]
-indent_style = tab
+indent_style = space
