--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,6 @@
 {
-    "tabWidth": 2,
-    "semi": false,
-    "bracketSameLine": true,
-    "singleQuote": true,
-    "printWidth": 100
+  "tabWidth": 2,
+  "semi": false,
+  "bracketSameLine": true,
+  "singleQuote": true
 }
