--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,7 @@
   "tabWidth": 2,
   "semi": false,
   "bracketSameLine": true,
-  "singleQuote": true
+  "singleQuote": true,
+	"printWidth": 120,
+	"endofline": "lf"
 }
