--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "pinia": "^2.1.7",
     "qs": "^6.11.2",
     "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.6.1",
