--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@vicons/ionicons5": "^0.12.0",
     "@vueuse/core": "^10.7.2",
     "axios": "^1.6.7",
+    "highlight.js": "^11.9.0",
     "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
     "naive-ui": "^2.37.3",
     "pinia": "^2.1.7",
     "qs": "^6.11.2",
+    "quill": "2.0.2",
     "vue": "^3.4.27",
     "vue-router": "^4.2.5",
     "vuedraggable": "^4.1.0"
