--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "experimentalDecorators": true,
+    "allowImportingTsExtensions": true,
     "lib": ["dom", "esnext"],
     "typeRoots": ["./node_modules/@types/", "./types"],
     "noImplicitAny": false,
