--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "postcss-html": "^1.6.0",
     "postcss-import": "^16.0.1",
     "postcss-nested": "^6.0.1",
+    "seemly": "^0.3.8",
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-standard": "^29.0.0",
